--- a/ethnode/webdoc/me.poc.html
+++ b/ethnode/webdoc/me.poc.html
@@ -12,11 +12,22 @@
     </div>
     <div class="float_left w99" style="height: 6px;"></div>
         <div class="float_left box_shadow_a air_inside w99">
-            
             <div class="float_left bold">Skills:&nbsp;</div>
-            <br><br>
-            <div id="skill_component"></div>
-            <!--skill component-->
+                <br>
+                <br>
+
+                <a class="skill_box" href="#">Python</a>
+                <a class="skill_box" href="#">Hacking</a>
+                <a class="skill_box" href="#">Javascript</a>
+                <a class="skill_box" href="#">Html</a>
+                <a class="skill_box" href="#">Web</a>
+                <a class="skill_box" href="#">Django</a>
+                <a class="skill_box" href="#">REST API</a>
+                <a class="skill_box" href="#">Networking</a>
+                <a class="skill_box" href="#">Agile</a>
+                <a class="skill_box" href="#">Management</a>
+                <a class="skill_box" href="#">Integration</a>
+                <a class="skill_box" href="#">Linux</a>
         </div>
         <div class="float_left w99" style="height: 6px;"></div>
         <div class="resume_box float_left box_shadow_a air_inside w99">
